2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Fix build.

2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Use
	  StoredReference to compare references, since it never
	  changes, and Reference may change (depending on the current
	  framework). Improved error message.

	* MonoDevelop.Projects/DotNetProject.cs: There is no need to
	  re-add references which don't change. ResetReference will no
	  fire a StatusChanged event and the solution pad will be
	  updated.

2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Notify changes in
	  SpecificVersion.

2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Notify changes in
	  the status of the reference.

	* MonoDevelop.Projects/DotNetProject.cs: Update the project
	  references when the default runtime changes.

2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs:
	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Fixed
	  "Bug 514563 - Inconsistent treatment of nullable types for
	  comments and information".

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	  Don't report the error about missing resgen if the tool is
	  not really necessary.

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom\AbstractMember.cs: Allow internal
	  visibility between types from a file not bound to a project.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: Don't
	  reuse this serializer for children, since it has
	  solution-specific serialization code.

2009-06-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/BuildResult.cs: Make Append more usable
	  by returning 'this' so it can be chained more easily. Also